--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,12 @@ find_package(Qt5Xml REQUIRED)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
-add_executable(qepgviewer main.cpp EpgView.cpp Channel.cpp ChannelView.cpp ProgrammeView.cpp)
+add_executable(qepgviewer main.cpp EpgView.cpp Channel.cpp ProgrammeView.cpp)
 
 target_link_libraries(qepgviewer Qt5::Widgets Qt5::Xml)
 target_compile_features( qepgviewer PRIVATE cxx_deleted_functions cxx_rvalue_references cxx_range_for )
+
+add_executable(qtableviewtest qtableviewtest.cpp)
+target_link_libraries(qtableviewtest Qt5::Widgets)
 
 install(TARGETS qepgviewer RUNTIME DESTINATION bin)
